# Hackathon

./: README.md  generator_data.py  hackathon.ipynb  hackathon_genetic.py
API/: .env  .gitignore  app.js  package-lock.json  package.json
API/config/: config.js
API/controllers/auth/: index.js
API/controllers/metrics/: index.js
API/db/models/: index.js  metrics.js  user.js
API/db/seeders/: 20231220140906-example.js
API/middleware/: authorize.js  checks.js
API/routes/: auth.js  metrics.js  user.js
API/services/: formatService.js
Front/src/: styles.scss
Front/src/app/: app-routing.module.ts
Front/src/app/core/: core.module.ts
Front/src/app/core/components/header/: header.component.html
Front/src/app/modules/home/pages/home/home/: home-page.component.html  home-page.component.scss
autoML/: genetic_ann.py  pyproject.toml  serve_model.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/components/Navbar/: NavbarElements.js  index.js
frontend/src/constants/: urls.js
frontend/src/guards/: guardedRoute.js
frontend/src/pages/: DashboardPage.js  HomePage.js  LoginPage.js  SignupPage.js  UploadPage.js
frontend/src/services/: authService.js  metricsService.js  userService.js
python/: Sample_Data_with_Predict_Y.csv  serve_model.py  test_pygan.py
