[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["AhmedEnnaifer <ahmedennaifer00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
pygad = "^3.3.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pandas = "^2.2.2"
python-multipart = "^0.0.9"
pydantic = "^2.7.3"
scikit-learn = "^1.5.0"
keras = "^3.3.3"
deap = "^1.4.1"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
